--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -5,7 +5,7 @@ footer {
     background-size: cover;
     background-position: bottom;
 
-    .containers {
+    .container {
 
         .footer__item {
             padding: 0 40px;
@@ -157,3 +157,16 @@ footer {
         }
     }
 }
+@media (max-width: 780px) {
+    .footer{
+        .container{
+            .footer__item{
+                margin-bottom: 40px;
+                h1{
+                    font-size: 1.5rem;
+                }
+            }
+        }
+    }
+    
+   }
